# yc-partner-preference-map

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: language-settings-rollback.md  passive-recorder-plan.md
drone/passive-controller-recorder/: README.md  pyproject.toml
drone/passive-controller-recorder/docs/: research.md  roadmap.md  safety.md
drone/passive-controller-recorder/samples/: authorized-source-template.json
drone/passive-controller-recorder/schemas/: normalized-event.schema.json  session-manifest.schema.json
drone/passive-controller-recorder/src/passive_recorder/: __init__.py  cli.py  models.py  storage.py
drone/passive-controller-recorder/src/passive_recorder/sources/: __init__.py  ardupilot.py  autel.py  base.py  betaflight.py  dji.py  px4.py
drone/passive-controller-recorder/tests/: conftest.py  test_adapter_discovery.py  test_cli.py  test_project_imports.py  test_session_workflow.py
portable-recorder/Vedawiki-Recorder/: README.txt  start-api-mac.command  start-api-windows.bat  start-recorder-mac.command  start-recorder-windows.bat
public/downloads/: vedawiki-government-evaluation-kit.txt
public/stock/: photo-sources.txt
recorder/: __init__.py  export_csv.py  import_logs.py  recorder.py  requirements.txt  server.py  sources.py
recorder/tests/: test_export_csv.py  test_import_logs.py
scripts/: build-portable-recorder.mjs  ingest-yc.mjs
src/: App.css  App.tsx  RecorderDashboard.tsx  index.css
src/data/: yc-preferences.json
src/i18n/: locales.ts  siteCopy.ts
(+4 files in other folders)
